@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-25T01:12:33Z",
+  "timestamp" : "2022-11-25T08:18:30Z",
   "count_outdated" : 453,
   "uniques_outdated" : 250,
-  "count" : 479,
-  "uniques" : 263,
+  "count" : 480,
+  "uniques" : 264,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-11-24T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
