@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 2,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-11-24T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-25T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
