@@ -1,3 +1,11 @@
+2022-11-25T08:18:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3546369406 # 645
+* notice: last 14d: unq all: 2 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 263 479
+* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 264 480
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-25]
+
 2022-11-25T01:12:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544582413 # 644
 * notice: last 14d: unq all: 2 26
